# solocoder-5297-tauri-markdown

./: NEXT_PROMPT_R1.txt  PROMPT.txt  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: encryption.rs  error.rs  export.rs  file_manager.rs  lib.rs  models.rs  plugin.rs  search.rs  snapshot.rs  state.rs  sync.rs
src/components/: Editor.vue  Outline.vue  Preview.vue  Sidebar.vue  StatusBar.vue  TabBar.vue  TitleBar.vue
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/services/: imageUploader.ts  markdownRenderer.ts  pluginManager.ts  search.ts  snapshot.ts
src/store/: docs.ts  editor.ts  sync.ts  theme.ts
src/styles/: main.css
src/types/: index.ts
