[package]
name = "markdown-editor"
version = "0.1.0"
description = "A lightweight markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
dunce = "1"
walkdir = "2"
grep-cli = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-printer = "0.1"
ignore = "0.4"
regex = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
webdav = "0.5"
reqwest = { version = "0.12", features = ["stream", "json", "multipart", "rustls-tls"] }
rust-s3 = { version = "0.34", features = ["tokio"] }
docx-rs = "0.4"
lopdf = "0.32"
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
