[package]
name = "markdown-editor"
version = "0.1.0"
description = "A lightweight markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
walkdir = "2"
regex = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
